# curso_django_framework

./: pyproject.toml  requirements.txt
secao01-bases-programacao-web/css/: estilos2.css  pagina1.html  pagina2.html  pagina3.html
secao01-bases-programacao-web/frameworks/: index.html
secao01-bases-programacao-web/html/: pagina1.html  pagina2.html
secao01-bases-programacao-web/js/: index.html  script.js
secao01-bases-programacao-web/meet-me-opl/: index.html
secao02-django-basico/: db.sqlite3
secao02-django-basico/core/: urls.py  views.py
secao02-django-basico/core/migrations/: 0001_initial.py  0002_cliente.py
secao02-django-basico/core/templates/: 404.html  500.html  contact.html  index.html  permissions.html  produto.html
secao02-django-basico/django1/: settings.py
secao03-django-intermediario/: manage.py  requirements.txt
secao03-django-intermediario/core/: admin.py  forms.py  models.py  views.py
secao03-django-intermediario/core/migrations/: 0001_initial.py
secao03-django-intermediario/core/templates/: contato.html  index.html  produto.html
secao03-django-intermediario/django2/: settings.py
