[tool.poetry]
name = "curso-django-framework"
version = "0.1.0"
description = ""
authors = ["davilos <daviloscostagg@hotmail.com>"]
readme = "README.md"
packages = [{include = "curso_django_framework"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
blue = "^0.9.1"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
pymysql = "^1.0.2"
django-stdimage = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
